Fixes Scheduling Text Padding and Map Functionality (#173)
* Fixed Schedule Text Overlapping with Pin

* Added Map Functionality

* Updated Ruby Version

--- a/css/custom.css
+++ b/css/custom.css
@@ -32,6 +32,26 @@
   border: none;
 }
 
+.schedule-title {
+  margin-right: 20px;
+}
+
+.schedule-text {
+  margin-right: 15px;
+}
+
+.marker-pin {
+  margin-left: 15px;
+}
+
+.map-holder:before {
+  content: none;
+}
+
+.maps iframe{
+  pointer-events: none;
+}
+
 .tweets-feed {
   color: #FFFFFF;
   line-height: 25px;
